# ViewerScatterplotPlugin

./: CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
src/: ColorSourceModel.cpp  ColoringAction.cpp  ColoringAction.h  DensityPlotAction.cpp  DensityPlotAction.h  ExportImageAction.cpp  ExportImageAction.h  ExportImageDialog.cpp  ExportImageDialog.h  LoadedDatasetsAction.cpp  LoadedDatasetsAction.h  ManualClusteringAction.cpp  ManualClusteringAction.h  MiscellaneousAction.cpp  MiscellaneousAction.h  PlotAction.cpp  PlotAction.h  PluginAction.cpp  PluginAction.h  PointPlotAction.cpp  PointPlotAction.h  PositionAction.cpp  PositionAction.h  RenderModeAction.cpp  RenderModeAction.h  ScalarAction.cpp  ScalarAction.h  ScalarSourceAction.cpp  ScalarSourceAction.h  ScalarSourceModel.cpp  SelectionAction.cpp  SelectionAction.h  SettingsAction.cpp  SettingsAction.h  SubsetAction.cpp  SubsetAction.h  ViewerScatterplotPlugin.cpp  ViewerScatterplotPlugin.h  ViewerScatterplotPlugin.json  ViewerScatterplotWidget.cpp  (+1 more)
